tests/semantic/type_system_sum_types1/type_system_sum_types1.dl
// Souffle - A Datalog Compiler
// Copyright (c) 2020, The Souffle Developers. All rights reserved
// Licensed under the Universal Permissive License v 1.0 as shown at:
// - https://opensource.org/licenses/UPL
// - <souffle root>/licenses/SOUFFLE-UPL.txt

//
// Type System Sum Types 1
//
// Check if incorrectly defined sum types fail. 
//



// Repeated branches
.type A
  = X : number
  ; Y : float
  ; X : number
  ; Y : float
  ; Z : symbol


// Non Existing type.
.type B = X : definitlyNotAType
